--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -3,4 +3,11 @@
 
 {% block content %}
 <h1>About page</h1>
+
+<div>
+<p>
+  This is my interesting fact:</br>
+  I can sove a rubik's cube.
+</p>
+</div>
 {% endblock content %}
